--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -6,7 +6,7 @@ on:
       - main
 
 permissions:
-  id-token: write   # REQUIRED for OIDC
+  id-token: write
   contents: read
 
 jobs:
@@ -25,7 +25,7 @@ jobs:
 
       - name: Deploy to S3
         run: |
-          aws s3 sync . s3://kanishq-day-7-static-site-2026 \
+          aws s3 sync . s3://kanishq-day7-static-site-2026 \
             --delete \
             --exclude ".git/*" \
             --exclude ".github/*"
